--- a/TrackEditingViewController.xib
+++ b/TrackEditingViewController.xib
@@ -440,7 +440,7 @@
 			<integer value="3000" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
-		<string key="IBDocument.LastKnownRelativeProjectPath">../Conference.xcodeproj</string>
+		<string key="IBDocument.LastKnownRelativeProjectPath">Conference.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<string key="IBCocoaTouchPluginVersion">3.1</string>
 	</data>
